--- a/src/index.css
+++ b/src/index.css
@@ -5,5 +5,12 @@
 @layer base {
   * {
     color: #cacaca;
+    user-select: none;
+  }
+  img {
+    -webkit-user-drag: none;
+    -khtml-user-drag: none;
+    -moz-user-drag: none;
+    -o-user-drag: none;
   }
 }
